--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -46,17 +46,17 @@
                     <i class="material-icons">assignment</i>Recipes
                 </div>
                 <div class="collapsible-body teal lighten-3 account color_items">
-                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
-                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Search<i class="material-icons icon-teal-lightest">search</i></a>
-                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
+                        <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links teal-text text-lighten-2">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
+                        <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links teal-text text-lighten-2">Search<i class="material-icons icon-teal-lightest">search</i></a>
+                        <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest color_links teal-text text-lighten-2">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
                 </div>
             </li>
             <li>
                 <div class="collapsible-header teal lighten-1 color_items"><i class="material-icons">account_circle</i>Account</div>
                 <div class="collapsible-body teal lighten-2 account color_items">
-                        <a href={% url 'user_preferences' %} class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
-                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">Theme<i class="material-icons icon-teal-lightest">settings</i></a>
-                        <a href='../users'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links">Log out<i class="material-icons icon-teal-lightest">exit_to_app</i></a>
+                        <a href={% url 'user_preferences' %} class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links teal-text text-lighten-2">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
+                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links teal-text text-lighten-2">Theme<i class="material-icons icon-teal-lightest">settings</i></a>
+                        <a href='../users'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger color_links teal-text text-lighten-2">Log out<i class="material-icons icon-teal-lightest">exit_to_app</i></a>
                 </div>
             </li>
         </ul>
@@ -73,9 +73,9 @@
                     <div class="purple color_option"></div>
                 </div>
             </div>
-            <!-- <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div> -->
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">close</a>
+            </div>
     </div>
                 
 
