star,cake and search icon colored

--- a/RecipeTop/main/templates/main/user_preferences.html
+++ b/RecipeTop/main/templates/main/user_preferences.html
@@ -42,7 +42,7 @@
                 </div>
         </div>
         <div class="prf_btn">
-                        <input type="submit" value="Change" class="btn teal">
+                        <input type="submit" value="Change" class="btn teal color_items">
         </div>
         <div class="hidden">
                 <form action="{% url 'user_preferences' %}" method="POST">
