--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -28,7 +28,7 @@
         <form action={% url 'search' %} method="GET">
 
             <!-- Search Bar -->
-            <div class="input-field">
+            <div class="input-field teal color_items">
               <input id="search" type="search" name="search">
               <label class="label-icon" for="search"><i class="material-icons">search</i></label>
               <i class="material-icons">close</i>
@@ -41,27 +41,27 @@
                         <tr>
                             <td>
                                 <button type="button" id="10001" class="star_button" >
-                                    <i class="small material-icons icon-teal">star_outline</i>
+                                    <i class="small material-icons teal-text color_links">star_outline</i>
                                 </button>
                             </td>
                             <td>
                                 <button type="button" id="10002" class="star_button">
-                                    <i class="small material-icons icon-teal">star_outline</i>
+                                    <i class="small material-icons icon-teal teal-text color_links"">star_outline</i>
                                 </button>
                             </td>
                             <td>
                                 <button type="button" id="10003" class="star_button">
-                                    <i class="small material-icons icon-teal">star_outline</i>
+                                    <i class="small material-icons icon-teal teal-text color_links"">star_outline</i>
                                 </button>
                             </td>
                             <td>
                                 <button type="button" id="10004" class="star_button">
-                                    <i class="small material-icons icon-teal">star_outline</i>
+                                    <i class="small material-icons icon-teal teal-text color_links"">star_outline</i>
                                 </button>
                             </td>
                             <td>
                                 <button type="button" id="10005" class="star_button">
-                                    <i class="small material-icons icon-teal">star_outline</i>
+                                    <i class="small material-icons icon-teal teal-text color_links">star_outline</i>
                                 </button>
                             </td>
                         </tr>
@@ -74,27 +74,27 @@
                     <tr class="difficulty_table">
                         <td >
                             <button type="button" id="1001" class="difficulty_button" >
-                                <i class="small material-icons icon-grey">cake</i>
+                                <i class="small material-icons icon-grey teal-text color_links">cake</i>
                             </button>
                         </td>
                         <td>
                             <button type="button" id="1002" class="difficulty_button">
-                                <i class="small material-icons icon-grey">cake</i>
+                                <i class="small material-icons icon-grey teal-text color_links">cake</i>
                             </button>
                         </td>
                         <td>
                             <button type="button" id="1003" class="difficulty_button">
-                                <i class="small material-icons icon-grey">cake</i>
+                                <i class="small material-icons icon-grey teal-text color_links">cake</i>
                             </button>
                         </td>
                         <td>
                             <button type="button" id="1004" class="difficulty_button">
-                                <i class="small material-icons icon-grey">cake</i>
+                                <i class="small material-icons icon-grey teal-text color_links">cake</i>
                             </button>
                         </td>
                         <td>
                             <button type="button" id="1005" class="difficulty_button">
-                                <i class="small material-icons icon-grey">cake</i>
+                                <i class="small material-icons icon-grey teal-text color_links">cake</i>
                             </button>
                         </td>
                     </tr>
