--- a/RecipeTop/main/static/main/css/finish_recipe.css
+++ b/RecipeTop/main/static/main/css/finish_recipe.css
@@ -15,7 +15,7 @@ body{
 }
 .box_container{
     width:60vw;
-    height:70%;
+    height:80vh;
     padding: 5px 10px;
     background:white;
     margin:auto;
