--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -32,7 +32,7 @@
         <div id="MenuLine"></div>
     </div>
     <div id="MainMenu">
-        <div id="logo">
+        <div id="logo" class="z-depth-2">
             <img>
         </div>
         <ul class="collapsible" id="uls">
