--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -140,8 +140,8 @@
                     </div>
                 {% endfor %}
             </div>
-            <button type="submit" class='waves-effect waves-dark btn teal lighten-1'>Apply Filters</button>
-            <a href={% url 'search' %} class='waves-effect waves-dark btn teal lighten-1'>Reset Filters</a>
+            <button type="submit" class='waves-effect waves-dark btn teal lighten-1 color_items'>Apply Filters</button>
+            <a href={% url 'search' %} class='waves-effect waves-dark btn teal lighten-1 color_items'>Reset Filters</a>
         </form>
         </div>
     </nav>
@@ -188,58 +188,58 @@
                                 <div class="rating_display_container ">
                                     <h4 class="rating">Rating: </h4>
                                     {% if recipe.rating >= 1 %}
-                                        <i class="small material-icons icon-teal-card">star</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star</i>
                                     {% else %}
-                                        <i class="small material-icons icon-teal-card">star_outline</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star_outline</i>
                                     {% endif%}
                                     {% if recipe.rating >= 2 %}
-                                        <i class="small material-icons icon-teal-card">star</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star</i>
                                     {% else %}
-                                        <i class="small material-icons icon-teal-card">star_outline</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star_outline</i>
                                     {% endif%}
                                     {% if recipe.rating >= 3 %}
-                                        <i class="small material-icons icon-teal-card">star</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star</i>
                                     {% else %}
-                                        <i class="small material-icons icon-teal-card">star_outline</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star_outline</i>
                                     {% endif%}
                                     {% if recipe.rating >= 4 %}
-                                        <i class="small material-icons icon-teal-card">star</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star</i>
                                     {% else %}
-                                        <i class="small material-icons icon-teal-card">star_outline</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star_outline</i>
                                     {% endif%}
                                     {% if recipe.rating >= 5 %}
-                                        <i class="small material-icons icon-teal-card">star</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star</i>
                                     {% else %}
-                                        <i class="small material-icons icon-teal-card">star_outline</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">star_outline</i>
                                     {% endif%}
                                 </div>
 
                                 <div class="rating_display_container ">
                                     <h4>Difficulty: </h4>
                                     {% if recipe.difficulty >= 1 %}
-                                        <i class="small material-icons icon-teal-card">cake</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">cake</i>
                                     {% else %}
-                                        <i class="small material-icons icon-gray-card">cake</i>
+                                        <i class="small material-icons icon-gray-card teal-text color_links">cake</i>
                                     {% endif%}
                                     {% if recipe.difficulty >= 2 %}
-                                        <i class="small material-icons icon-teal-card">cake</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">cake</i>
                                     {% else %}
-                                        <i class="small material-icons icon-gray-card">cake</i>
+                                        <i class="small material-icons icon-gray-card teal-text color_links">cake</i>
                                     {% endif%}
                                     {% if recipe.difficulty >= 3 %}
-                                        <i class="small material-icons icon-teal-card">cake</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">cake</i>
                                     {% else %}
-                                        <i class="small material-icons icon-gray-card">cake</i>
+                                        <i class="small material-icons icon-gray-card teal-text color_links">cake</i>
                                     {% endif%}
                                     {% if recipe.difficulty >= 4 %}
-                                        <i class="small material-icons icon-teal-card">cake</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">cake</i>
                                     {% else %}
-                                        <i class="small material-icons icon-gray-card">cake</i>
+                                        <i class="small material-icons icon-gray-card teal-text color_links">cake</i>
                                     {% endif%}
                                     {% if recipe.difficulty >= 5 %}
-                                        <i class="small material-icons icon-teal-card">cake</i>
+                                        <i class="small material-icons icon-teal-card teal-text color_links">cake</i>
                                     {% else %}
-                                        <i class="small material-icons icon-gray-card">cake</i>
+                                        <i class="small material-icons icon-gray-card teal-text color_links">cake</i>
                                     {% endif%}
                                 </div>
 
@@ -248,7 +248,10 @@
                                     {% for ing in recipe.recipetoingredient_set.all %}
                                         <label>
                                             <input type="checkbox" value="{{ing.ingredient.name}}" name="ingredients"/>
-                                                <span><span style="color:teal">{{ing.quantity}}</span> {{ing.get_unit}} {{ing.ingredient.name}}  </span>
+                                                <span>
+                                                    <span class="teal-text color_links text-lighten-2">{{ing.quantity}}</span>
+                                                    <span class="grey-text text-darken-4">  {{ing.get_unit}} {{ing.ingredient.name}} </span>
+                                                </span>
                                         </label>
                                     {% endfor %}
                                 </div>
@@ -258,7 +261,7 @@
                                       {% for utensil in recipe.utensils.all %}
                                             <label>
                                                 <input type="checkbox" value="{{utensil.name}}" name="utensils"/>
-                                                    <span>{{utensil.name}}  </span>
+                                                    <span class="grey-text text-darken-4">{{utensil.name}}  </span>
                                             </label>
                                         {% endfor %}
                                 </div>
