--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -137,12 +137,16 @@ body {
   z-index: 102;
 }
 #MainMenu #logo {
-  height: 75px;
-  width: 75px;
+  height: 180px;
+  width: 200px;
   background-image: url("../img/user.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 50%;
+  border:2.5px solid teal;
+  position: absolute;
+  top:2%;
 }
 #MainMenu ul {
   list-style: none;
