--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -42,8 +42,8 @@
 					<img src={% static "main/img/cakes_un.svg" %}  class="star3 cakes" alt="">
 			</div>
 			<div class="bottom_button">
-				<a class="waves-effect waves-light btn-small disabled dis_btn" onclick="editClick()"><i class="material-icons right">edit</i>Edit</a>
-				<a class="waves-effect waves-light btn-small disabled dis_btn" onclick="homeClick()"><i class="material-icons right">home</i>Home</a>
+				<a class="waves-effect waves-light btn-large disabled dis_btn teal color_items" onclick="editClick()"><i class="material-icons right">edit</i>Edit</a>
+				<a class="waves-effect waves-light btn-large disabled dis_btn teal color_items" onclick="homeClick()"><i class="material-icons right">home</i>Home</a>
 			</div>
 		</div>
 	</div>
