card title fix now cursive

--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -99,6 +99,9 @@
 .gallery-body h4{
   font-family: 'Lobster', cursive;
 }
+.gallery-body h3{
+  font-family: 'Lobster', cursive;
+}
 /*# sourceMappingURL=cards.css.map */
 
 /*# sourceMappingURL=cards.css.map */
