--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -183,7 +183,7 @@
                   		</li>
                   		<!-- Steps -->
                   		<li class="step">
-                     		<div  class="step-title waves-effect waves-dark">Method</div>
+                     		<div  class="step-title waves-effect waves-dark">Directions</div>
                      		<div class="step-content">
                         		<div class="row">
                            			<!-- steps -->
