--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -144,7 +144,7 @@
                                                     {% endfor %}
                                             </div>
             
-                                            <h4>Method</h4>
+                                            <h4>Directions</h4>
                                             <div class="recipe_steps">
                                                 {% for step in recipe.steps.all %}
                                                         <span >{{step.stepNumber}}.</span>
