--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -171,9 +171,9 @@
                        </div>
                        <br>
                        <div class="ingredient_props">
-                            <div class="prop1"><i class="material-icons">library_books</i><span>serving size</span></div>
-                            <div class="prop2"><i class="material-icons">schedule</i><span>cook time</span></div>
-                            <div class="prop1"><i class="material-icons">local_dining</i><span>utensil</span></div>
+                            <div class="prop1"><i class="material-icons teal-text color_links">star</i><span>{{recipe.rating}}</span></div>
+                            <div class="prop2"><i class="material-icons teal-text color_links">cake</i><span>{{recipe.difficulty}}</span></div>
+                            <div class="prop1"><i class="material-icons teal-text color_links">local_dining</i><span>{{recipe.estDuration}} mins</span></div>
                        </div>
                     </div>
                     <!-- inside the card stuff -->
@@ -265,7 +265,6 @@
                                             </label>
                                         {% endfor %}
                                 </div>
-
                                 <h4>Directions</h4>
                                 <div class="recipe_steps">
                                     {% for step in recipe.steps.all %}
@@ -273,9 +272,7 @@
                                             <span>{{step.text}}  </span>
                                            
                                     {% endfor %}
-
                                 </div>
-
                             </div>
                     </div>
                         <div class="gallery-action">
