--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -173,7 +173,7 @@
                        <div class="ingredient_props">
                             <div class="prop1"><i class="material-icons teal-text color_links">star</i><span>{{recipe.rating}}</span></div>
                             <div class="prop2"><i class="material-icons teal-text color_links">cake</i><span>{{recipe.difficulty}}</span></div>
-                            <div class="prop1"><i class="material-icons teal-text color_links">local_dining</i><span>{{recipe.estDuration}} mins</span></div>
+                            <div class="prop1"><i class="material-icons teal-text color_links">access_time</i><span>{{recipe.estDuration}} mins</span></div>
                        </div>
                     </div>
                     <!-- inside the card stuff -->
