Fix bugs created by color changes and redo some css stuff

--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -46,8 +46,11 @@
 
 }
 .change-line-height{
-  padding-top: 20px;
+  padding-top: 30px;
   line-height: 15px;
+}
+.bigger{
+  zoom:1.5;
 }
 .difficulty{
   width:50%;
