--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -10,7 +10,7 @@ body {
 } */
 
 .link-teal-lightest {
-  /* color: #80cbc4; */
+   color: #80cbc4; 
   width: 100%;
   height: 80%;
   padding-top: 2%;
@@ -264,7 +264,7 @@ section {
   width:100%;
 }
 .color_option{
-  height:100%;
+  height:80%;
   width:80%;
 }
 .color_option:hover{
