Add tags to cards on home page

--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -153,6 +153,14 @@
                                                 {% endfor %}
             
                                             </div>
+                                            <h4>Tags</h4>
+                                            <div >
+                                                {% for tag in recipe.keywords.all%}
+                                                    <div class="chip bigger change_color">
+                                                        {{tag.name}}
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
             
                                         </div>
                                     </div>
